# air-quality-monitor

./: .gitignore  CMakeLists.txt  Kconfig  README.md  air-quality-monitor.eez-project  air-quality-monitor.eez-project-ui-state  prj.conf  west.yml
boards/: esp32c6_devkitc_esp32c6_hpcore.overlay
src/: main.c  sgp30.c  sgp30.h
src/sensors/: sgp30.c  sgp30.h
src/ui/: fonts.h  images.h  screens.c  screens.h  ui.c  ui.h  vars.h
